--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -343,17 +343,25 @@ pre > code {
 /* Tables
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 th,
-td {
-  padding: 12px 15px;
-  text-align: left;
+td{
+  padding: 1% 1.3%;
+  text-align: center;
   border-bottom: 1px solid #E1E1E1; }
 th:first-child,
 td:first-child {
-  padding-left: 0; }
+  padding-left: 0%; }
 th:last-child,
 td:last-child {
-  padding-right: 0; }
+  padding-right: 0%; }
 
+  @media 
+  only screen and (max-width: 500px),
+  (min-device-width: 0px) and (max-device-width: 500px)  {
+    th, td { 
+      padding: 0.1% 0.2%;
+      font-size: 80%;
+    }
+  }
 
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
